--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -3987,7 +3987,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 187,
+   "id": "99238f78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Moscow, Moscow'"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linkedinDict[\"Headquarters\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
    "id": "4be87753",
    "metadata": {},
    "outputs": [],
@@ -4019,10 +4040,23 @@
     "        driver.get(link)\n",
     "        time.sleep(2)\n",
     "        soup = BeautifulSoup(driver.page_source, \"html.parser\")\n",
-    "        sectionUnderName = soup.find_all(\"div\", \"org-top-card-summary-info-list__info-item\")\n",
-    "        if (len(sectionUnderName) <= 2):\n",
-    "            raise #Note that  some linkedin webpage don't have the headquarters ection, so in that case we'll also return \"missing\"\n",
-    "        \n",
+    "\n",
+    "        dl = soup.find('div', 'mb6').find('dl')\n",
+    "        keys = []\n",
+    "        values = []\n",
+    "        for tag in dl.find_all('dt'):\n",
+    "            txt = tag.text.strip()\n",
+    "            if (txt != ''):\n",
+    "                keys.append(txt)\n",
+    "        for tag in dl.find_all('dd'):\n",
+    "            txt = tag.text.strip()\n",
+    "            if (txt != ''):\n",
+    "                values.append(txt)\n",
+    "        values = [txt for txt in values if \"Includes\" not in txt]\n",
+    "        linkedinDict = dict(zip(keys, values))\n",
+    "        print(1)\n",
+    "        cityAndState = linkedinDict[\"Headquarters\"]\n",
+    "        print(cityAndState)\n",
     "    except:\n",
     "        print(\"missing\")\n",
     "        lock.acquire()\n",
@@ -4030,7 +4064,7 @@
     "        lock.release()\n",
     "        return\n",
     "\n",
-    "    city = sectionUnderName[1].text.split(',')[0] # eg: \"Cupertino, California\" will be [\"Cupertino\", \"California\"], so \"Cupertino\" will be returned\n",
+    "    city = cityAndState.split(',')[0] # eg: \"Cupertino, California\" will be [\"Cupertino\", \"California\"], so \"Cupertino\" will be returned\n",
     "    geolocator = Nominatim(user_agent=\"ashraf196280@bue.edu.eg\")\n",
     "    location = geolocator.geocode(city, language=\"en\")\n",
     "    country = location.address.split(', ')[-1]\n",
@@ -4043,7 +4077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 189,
    "id": "4b006652",
    "metadata": {},
    "outputs": [],
@@ -4054,7 +4088,7 @@
     "    links = linkss[0:5]\n",
     "    threads = []\n",
     "    for tup in links.iteritems(): # tup[0] --> index, tup[1] --> url (i.e. link)\n",
-    "        th = Thread(target=fetchCountry, args=(tup[0], linkPrefix + tup[1].replace(\" \", \"\"))) #making sure company name doesn't have spaces when suffixed into the url\n",
+    "        th = Thread(target=fetchCountry, args=(tup[0], linkPrefix + tup[1].replace(\" \", \"\") + '/about')) #making sure company name doesn't have spaces when suffixed into the url\n",
     "        threads.append(th)\n",
     "        th.start()\n",
     "    for th in threads:\n",
@@ -4063,7 +4097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 190,
    "id": "aa93edfc",
    "metadata": {},
    "outputs": [
@@ -4071,11 +4105,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Gamma\\AppData\\Local\\Temp\\ipykernel_39004\\3857070051.py:18: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
+      "C:\\Users\\Gamma\\AppData\\Local\\Temp\\ipykernel_39004\\1105127303.py:18: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
       "  username = driver.find_element_by_id('username')\n",
-      "C:\\Users\\Gamma\\AppData\\Local\\Temp\\ipykernel_39004\\3857070051.py:20: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
+      "C:\\Users\\Gamma\\AppData\\Local\\Temp\\ipykernel_39004\\1105127303.py:20: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
       "  password = driver.find_element_by_id('password')\n",
-      "C:\\Users\\Gamma\\AppData\\Local\\Temp\\ipykernel_39004\\3857070051.py:22: DeprecationWarning: find_element_by_class_name is deprecated. Please use find_element(by=By.CLASS_NAME, value=name) instead\n",
+      "C:\\Users\\Gamma\\AppData\\Local\\Temp\\ipykernel_39004\\1105127303.py:22: DeprecationWarning: find_element_by_class_name is deprecated. Please use find_element(by=By.CLASS_NAME, value=name) instead\n",
       "  log_in_button = driver.find_element_by_class_name('from__button--floating')\n"
      ]
     },
@@ -4083,10 +4117,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<div class=\"org-top-card-summary-info-list__info-item\">\n",
-      " 37 followers\n",
-      "</div>\n",
-      "\n"
+      "missing\n",
+      "missing\n",
+      "missing\n",
+      "missing\n",
+      "missing\n",
+      "missing\n",
+      "1\n",
+      "Moscow, Moscow\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-48:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Gamma\\AppData\\Local\\Programs\\Python\\Python38\\lib\\threading.py\", line 932, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\Gamma\\AppData\\Local\\Programs\\Python\\Python38\\lib\\threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\Gamma\\AppData\\Local\\Temp\\ipykernel_39004\\1105127303.py\", line 56, in fetchCountry\n",
+      "AttributeError: 'NoneType' object has no attribute 'alpha_3'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "missing\n"
      ]
     }
    ],
