Most of Imputing is done

--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -3100,7 +3100,7 @@
    "id": "0ed10657",
    "metadata": {},
    "source": [
-    "We are currently interested in 'founded_at', 'first_funding_at' and 'last_funding_at'. Before doing operations on dates, they need to be converted first from 'Object' to 'DateTime'."
+    "We are currently interested in 'founded_at', 'first_funding_at' and 'last_funding_at' columns. Before doing operations on dates, they need to be converted first from 'Object' to 'DateTime'."
    ]
   },
   {
@@ -3146,7 +3146,7 @@
    "id": "5f20f55f",
    "metadata": {},
    "source": [
-    "After converting, we need to impute the missing values on the dates of when those companies where founded at. So, this will be done by first creating a new column that calculates how long it took to get the first funing. This will be done by subtracting the date of the founding from the date of the first funding."
+    "After converting, we need to impute the missing values on the dates of when those companies where founded at. So, this will be done by first creating a new column that calculates how long it took to get the first funding. This will be done by subtracting the date of the founding from the date of the first funding. Note that we will find some values in negative which indicate that some companies took funding before establishing it.\n"
    ]
   },
   {
@@ -3187,7 +3187,7 @@
    "id": "d6819874",
    "metadata": {},
    "source": [
-    "Now we need to calculate the mean of the time before the first funding and impute the missing values with this average."
+    "Now we need to calculate the mean of the time before the first funding and impute the missing values with this average. Notice that the average is 1370 days which is around 3.7 years which means there must be some outliers that messed up the average."
    ]
   },
   {
@@ -3219,8 +3219,7 @@
     }
    ],
    "source": [
-    "companies['time_before_first_fund'].fillna(companies['time_before_first_fund'].mean(), inplace = True)\n",
-    "companies['time_before_first_fund']"
+    "companies['time_before_first_fund'].mean()"
    ]
   },
   {
@@ -3228,7 +3227,7 @@
    "id": "092e391e",
    "metadata": {},
    "source": [
-    "After calculating the mean and filling the nulls with it, now we can impute the missing dates in the 'founded_at' column by subtracting the time before first funding from the first funding date."
+    "Therefore, we will need to visualize those outliers and maybe if they are causing inaccuracy in the data, we can drop them."
    ]
   },
   {
@@ -3260,8 +3259,351 @@
     }
    ],
    "source": [
+    "plt.scatter(companies['first_funding_at'], companies['founded_at'], s = 20, alpha = 0.5)\n",
+    "plt.xlabel('first_funding_at')\n",
+    "plt.ylabel('founded_at')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83d06573",
+   "metadata": {},
+   "source": [
+    "We Noticed that there are some outliers than can be removed from the dataset so we will create a temporary dataframe that will contain the outliers so we can drop them later on. The first outliers that we want to deduct are the ones at the left of the center."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aada3fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tempdf = companies.copy()\n",
+    "tempdf = tempdf[(tempdf.first_funding_at <= datetime.strptime(\"01/01/1983\", \"%d/%m/%Y\"))& (tempdf.founded_at <= datetime.strptime(\"01/01/2000\", \"%d/%m/%Y\"))]\n",
+    "dropseries = tempdf.copy()\n",
+    "dropseries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed79dcce",
+   "metadata": {},
+   "source": [
+    "Plotting the outliers on a separate graph:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daa40870",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(tempdf['first_funding_at'], tempdf['founded_at'], s = 20)\n",
+    "plt.xlabel('first_funding_at')\n",
+    "plt.ylabel('founded_at')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd9c6f45",
+   "metadata": {},
+   "source": [
+    "Now we will determine the outliers that are the bottom of the center from the original graph."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e72c0fbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tempdf = companies.copy()\n",
+    "tempdf = tempdf[(tempdf.first_funding_at < datetime.strptime(\"01/01/2005\", \"%d/%m/%Y\"))& (tempdf.founded_at <= datetime.strptime(\"01/01/1900\", \"%d/%m/%Y\"))]\n",
+    "tempdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d44b745a",
+   "metadata": {},
+   "source": [
+    "Plotting the outliers on a separate graph:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4c57f4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(tempdf['first_funding_at'], tempdf['founded_at'], s = 20)\n",
+    "plt.xlabel('first_funding_at')\n",
+    "plt.ylabel('founded_at')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1009fd9c",
+   "metadata": {},
+   "source": [
+    "Now we will concatenate the newly discovered outliers to the ones from before"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d999df32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropseries = pd.concat([dropseries, tempdf])\n",
+    "dropseries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0ea4667",
+   "metadata": {},
+   "source": [
+    "Finally, we will deduct the outliers that are the top right corner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51667bf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tempdf = companies.copy()\n",
+    "tempdf = tempdf[(tempdf.first_funding_at > datetime.strptime(\"01/01/2010\", \"%d/%m/%Y\"))& (tempdf.founded_at >= datetime.strptime(\"01/01/2030\", \"%d/%m/%Y\"))]\n",
+    "tempdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a561ef40",
+   "metadata": {},
+   "source": [
+    "Visualizing the outliers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85eccbf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(tempdf['first_funding_at'], tempdf['founded_at'], s = 20)\n",
+    "plt.xlabel('first_funding_at')\n",
+    "plt.ylabel('founded_at')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8e1b0e8",
+   "metadata": {},
+   "source": [
+    "Concatinating the outliers on the rest:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dccda7cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropseries = pd.concat([dropseries, tempdf])\n",
+    "dropseries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a54c937",
+   "metadata": {},
+   "source": [
+    "Now, we can drop all of the outliers that have been detected.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1452df66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list = dropseries.index\n",
+    "companies = companies.drop(list)\n",
+    "#companies['time_before_first_fund'].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffd65e6d",
+   "metadata": {},
+   "source": [
+    "Plotting the graph once more after cleaning:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cfd4c0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(companies['first_funding_at'], companies['founded_at'], s = 20, alpha=0.5)\n",
+    "plt.xlabel('first_funding_at')\n",
+    "plt.ylabel('founded_at')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "735aeb21",
+   "metadata": {},
+   "source": [
+    "Now, we can calculate the mean. Notice that there were not much of a difference but deducting the outliers helped keeping the data realistic because some dates were 2090, 2100, etc. which is unrealistic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a536c339",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies['time_before_first_fund'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfabcb20",
+   "metadata": {},
+   "source": [
+    "Filling the missing values with the new mean:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d9ac258",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies['time_before_first_fund'].fillna(companies['time_before_first_fund'].mean(), inplace = True)\n",
+    "companies['time_before_first_fund']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7c55e6b",
+   "metadata": {},
+   "source": [
+    "After calculating the mean and filling the nulls with it, now we can impute the missing dates in the 'founded_at' column by subtracting the time before first funding from the first funding date."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94466ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "companies['founded_at'].fillna(companies['first_funding_at'] - companies['time_before_first_fund'], inplace = True)\n",
     "companies['founded_at']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "463bd9d2",
+   "metadata": {},
+   "source": [
+    "Converting 'aquired_at' of the acquisitons dataset from Object to date:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6bd74c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acquis['acquired_at'] =pd.to_datetime(acquis['acquired_at'], errors = 'coerce')\n",
+    "acquis.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49e58e58",
+   "metadata": {},
+   "source": [
+    "Converting 'funded_at' of the investments dataset from Object to date:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5596c659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "invests['funded_at'] =pd.to_datetime(invests['funded_at'], errors = 'coerce')\n",
+    "invests.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6040d4cf",
+   "metadata": {},
+   "source": [
+    "Converting 'funded_at' of the rounds dataset from Object to date:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37c2212a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rounds['funded_at'] =pd.to_datetime(rounds['funded_at'], errors = 'coerce')\n",
+    "rounds.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c829240",
+   "metadata": {},
+   "source": [
+    "## Imputing Categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ffe0328",
+   "metadata": {},
+   "source": [
+    "Regarding the category list in the five datasets, since we don't have any indicator on deducing the null values in this column, we will fill the nulls with \"missing\". With samples, it's provided that the same rows (companies) that their category is missing in one dataset, are the same rows in the others so even merging the datasets will not be helpful.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13585573",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies['company_category_list'].fillna('missing', inplace=True)\n",
+    "acquis['company_category_list'].fillna('missing', inplace=True)\n",
+    "acquis['acquirer_category_list'].fillna('missing', inplace=True)\n",
+    "invests['company_category_list'].fillna('missing', inplace=True)\n",
+    "rounds['company_category_list'].fillna('missing', inplace=True)"
    ]
   },
   {
@@ -3788,6 +4130,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
+   "id": "8d9faf5f",
    "metadata": {},
    "outputs": [
     {
