--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -19329,10 +19329,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "companiesC['employee_count'] = \"\"\n",
+    "companiesC['employee_count'] = 0.0\n",
     "companiesC['country'] = \"\"\n",
-    "companiesC['number_of_technologies'] = \"\"\n",
-    "companiesC['annual_rev'] = \"\""
+    "companiesC['number_of_technologies'] = 0.0\n",
+    "companiesC['annual_rev'] = 0.0"
    ]
   },
   {
@@ -19342,7 +19342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = companiesC.loc[0:100]\n",
+    "df1 = companiesC.loc[0:1000]\n",
     "df2 = companiesC.loc[1001:2000]\n",
     "df3 = companiesC.loc[2001:3000]\n",
     "df4 = companiesC.loc[3001:4000]\n",
@@ -19874,7 +19874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
