Final Preparation before the ultimate scrapping multithreading quest ISA

--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a03a2c46",
    "metadata": {
     "collapsed": true
@@ -19255,7 +19255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "73e9425d",
    "metadata": {},
    "outputs": [],
@@ -19265,7 +19265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9cc69a2b",
    "metadata": {},
    "outputs": [],
@@ -19279,7 +19279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c9a12621",
    "metadata": {},
    "outputs": [],
@@ -19313,7 +19313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f6c9e903",
    "metadata": {},
    "outputs": [],
@@ -19346,7 +19346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "95add821",
    "metadata": {},
    "outputs": [],
@@ -19359,16 +19359,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "8ccc5ef3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = companiesC.loc[0:500]\n",
-    "df2 = companiesC.loc[1001:2000]\n",
-    "df3 = companiesC.loc[2001:3000]\n",
-    "df4 = companiesC.loc[3001:4000]\n",
-    "df5 = companiesC.loc[4001:5000]\n",
+    "df1 = companiesC.loc[0:30000]\n",
+    "df2 = companiesC.loc[30001:61267]\n",
     "dict = {\n",
     "    \"index\" : [],\n",
     "    \"employee_count\" : [],\n",
@@ -19381,7 +19378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "3d11bb06",
    "metadata": {},
    "outputs": [],
@@ -19421,7 +19418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "b514b299",
    "metadata": {},
    "outputs": [
@@ -19429,604 +19426,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "49\n",
-      "51\n",
-      "55\n",
-      "61\n",
-      "89\n",
-      "103\n",
-      "113\n",
-      "125\n",
-      "155\n",
-      "157\n",
-      "169\n",
-      "176\n",
-      "188\n",
-      "206\n",
-      "210\n",
-      "225\n",
-      "238\n",
-      "242\n",
-      "250\n",
-      "258\n",
-      "262\n",
-      "266\n",
-      "282\n",
-      "284\n",
-      "294\n",
-      "305\n",
-      "312\n",
-      "324\n",
-      "358\n",
-      "416\n",
-      "421\n",
-      "422\n",
-      "452\n",
-      "459\n",
-      "466\n",
-      "490\n",
-      "496\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "50\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "99\n",
-      "100\n",
-      "101\n",
-      "102\n",
-      "104\n",
-      "105\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "114\n",
-      "115\n",
-      "116\n",
-      "117\n",
-      "118\n",
-      "119\n",
-      "120\n",
-      "121\n",
-      "122\n",
-      "123\n",
-      "124\n",
-      "126\n",
-      "127\n",
-      "128\n",
-      "129\n",
-      "130\n",
-      "131\n",
-      "132\n",
-      "133\n",
-      "134\n",
-      "135\n",
-      "136\n",
-      "137\n",
-      "138\n",
-      "139\n",
-      "140\n",
-      "141\n",
-      "142\n",
-      "143\n",
-      "144\n",
-      "145\n",
-      "146\n",
-      "147\n",
-      "148\n",
-      "149\n",
-      "150\n",
-      "151\n",
-      "152\n",
-      "153\n",
-      "154\n",
-      "158\n",
-      "159\n",
-      "160\n",
-      "161\n",
-      "162\n",
-      "163\n",
-      "164\n",
-      "165\n",
-      "166\n",
-      "167\n",
-      "168\n",
-      "171\n",
-      "172\n",
-      "173\n",
-      "174\n",
-      "175\n",
-      "177\n",
-      "178\n",
-      "179\n",
-      "180\n",
-      "181\n",
-      "182\n",
-      "183\n",
-      "184\n",
-      "185\n",
-      "186\n",
-      "187\n",
-      "189\n",
-      "190\n",
-      "191\n",
-      "192\n",
-      "193\n",
-      "194\n",
-      "195\n",
-      "196\n",
-      "197\n",
-      "198\n",
-      "199\n",
-      "200\n",
-      "201\n",
-      "202\n",
-      "203\n",
-      "204\n",
-      "205\n",
-      "207\n",
-      "208\n",
-      "209\n",
-      "211\n",
-      "212\n",
-      "213\n",
-      "214\n",
-      "215\n",
-      "216\n",
-      "217\n",
-      "218\n",
-      "219\n",
-      "220\n",
-      "221\n",
-      "222\n",
-      "223\n",
-      "224\n",
-      "227\n",
-      "228\n",
-      "229\n",
-      "230\n",
-      "231\n",
-      "232\n",
-      "234\n",
-      "235\n",
-      "236\n",
-      "237\n",
-      "239\n",
-      "240\n",
-      "241\n",
-      "244\n",
-      "245\n",
-      "246\n",
-      "247\n",
-      "248\n",
-      "249\n",
-      "251\n",
-      "252\n",
-      "253\n",
-      "254\n",
-      "255\n",
-      "256\n",
-      "257\n",
-      "259\n",
-      "260\n",
-      "261\n",
-      "264\n",
-      "265\n",
-      "267\n",
-      "268\n",
-      "269\n",
-      "270\n",
-      "271\n",
-      "272\n",
-      "273\n",
-      "274\n",
-      "275\n",
-      "276\n",
-      "277\n",
-      "278\n",
-      "279\n",
-      "280\n",
-      "281\n",
-      "286\n",
-      "287\n",
-      "288\n",
-      "289\n",
-      "290\n",
-      "291\n",
-      "292\n",
-      "293\n",
-      "296\n",
-      "297\n",
-      "298\n",
-      "299\n",
-      "300\n",
-      "301\n",
-      "302\n",
-      "303\n",
-      "304\n",
-      "306\n",
-      "307\n",
-      "308\n",
-      "309\n",
-      "310\n",
-      "311\n",
-      "313\n",
-      "314\n",
-      "315\n",
-      "316\n",
-      "317\n",
-      "318\n",
-      "319\n",
-      "320\n",
-      "321\n",
-      "322\n",
-      "323\n",
-      "325\n",
-      "326\n",
-      "327\n",
-      "328\n",
-      "329\n",
-      "330\n",
-      "331\n",
-      "332\n",
-      "333\n",
-      "334\n",
-      "335\n",
-      "336\n",
-      "337\n",
-      "338\n",
-      "339\n",
-      "340\n",
-      "341\n",
-      "342\n",
-      "343\n",
-      "344\n",
-      "345\n",
-      "346\n",
-      "347\n",
-      "348\n",
-      "349\n",
-      "350\n",
-      "351\n",
-      "352\n",
-      "353\n",
-      "354\n",
-      "355\n",
-      "356\n",
-      "357\n",
-      "359\n",
-      "360\n",
-      "361\n",
-      "362\n",
-      "363\n",
-      "364\n",
-      "365\n",
-      "366\n",
-      "367\n",
-      "368\n",
-      "369\n",
-      "370\n",
-      "371\n",
-      "372\n",
-      "373\n",
-      "374\n",
-      "375\n",
-      "376\n",
-      "377\n",
-      "378\n",
-      "379\n",
-      "380\n",
-      "381\n",
-      "382\n",
-      "383\n",
-      "384\n",
-      "385\n",
-      "386\n",
-      "387\n",
-      "388\n",
-      "389\n",
-      "390\n",
-      "391\n",
-      "392\n",
-      "393\n",
-      "394\n",
-      "395\n",
-      "396\n",
-      "397\n",
-      "398\n",
-      "399\n",
-      "400\n",
-      "401\n",
-      "402\n",
-      "403\n",
-      "404\n",
-      "405\n",
-      "406\n",
-      "407\n",
-      "408\n",
-      "409\n",
-      "410\n",
-      "411\n",
-      "412\n",
-      "413\n",
-      "414\n",
-      "415\n",
-      "417\n",
-      "418\n",
-      "419\n",
-      "420\n",
-      "423\n",
-      "424\n",
-      "425\n",
-      "426\n",
-      "427\n",
-      "428\n",
-      "429\n",
-      "430\n",
-      "431\n",
-      "432\n",
-      "433\n",
-      "434\n",
-      "435\n",
-      "436\n",
-      "437\n",
-      "438\n",
-      "439\n",
-      "440\n",
-      "441\n",
-      "442\n",
-      "443\n",
-      "444\n",
-      "445\n",
-      "446\n",
-      "447\n",
-      "448\n",
-      "449\n",
-      "450\n",
-      "451\n",
-      "453\n",
-      "454\n",
-      "455\n",
-      "456\n",
-      "457\n",
-      "458\n",
-      "460\n",
-      "461\n",
-      "462\n",
-      "463\n",
-      "464\n",
-      "465\n",
-      "467\n",
-      "468\n",
-      "469\n",
-      "470\n",
-      "471\n",
-      "472\n",
-      "473\n",
-      "474\n",
-      "475\n",
-      "476\n",
-      "477\n",
-      "478\n",
-      "479\n",
-      "480\n",
-      "481\n",
-      "482\n",
-      "483\n",
-      "484\n",
-      "485\n",
-      "486\n",
-      "487\n",
-      "488\n",
-      "489\n",
-      "491\n",
-      "492\n",
-      "493\n",
-      "494\n",
-      "495\n",
-      "497\n",
-      "498\n",
-      "499\n",
-      "500\n",
-      "90\n",
-      "156\n",
-      "170\n",
-      "226\n",
-      "233\n",
-      "243\n",
-      "263\n",
-      "283\n",
-      "285\n",
-      "295\n"
+      "30001\n",
+      "31272\n",
+      "6\n"
      ]
     }
    ],
    "source": [
+    "from threading import active_count\n",
+    "otherThreads = active_count()\n",
     "threads = []\n",
-    "for i in range(len(df1)):\n",
-    "    searchTerm = df1['homepage_url'][i]\n",
-    "    th = Thread(target=getCompanyInfo, args=(i, searchTerm))\n",
+    "for i in range(len(df2)):\n",
+    "    searchTerm = df2['homepage_url'][i+30001]\n",
+    "    th = Thread(target=getCompanyInfo, args=(i+30001, searchTerm))\n",
     "    threads.append(th)\n",
     "    th.start()\n",
+    "\n",
+    "totalThreads = active_count()\n",
+    "print(active_count())\n",
+    "print(otherThreads)\n",
+    "while active_count() != otherThreads:\n",
+    "    time.sleep(2)\n",
+    "    dfTups = pd.DataFrame(compInfoTups, columns=['index', 'employee_count', 'country', 'number_of_technologies', 'annual_rev'])\n",
+    "    dfTups.to_csv('Scrapped Companies/scrapped_companies_2.csv', index=False, header=True)\n",
+    "\n",
     "for th in threads:\n",
-    "    th.join()"
+    "    th.join()\n",
+    "print(active_count())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "22be0740",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 57, 'India', 1, 1500000.0),\n",
-       " (1, 4, 'United States', 3, nan),\n",
-       " (5, 0, 'Hong Kong', 6, nan),\n",
-       " (2, 18, 'Japan', 10, nan),\n",
-       " (3, 0, 'Morocco', 5, nan),\n",
-       " (4, 67, 'Germany', 10, 5000000.0),\n",
-       " (6, 30, 'Canada', 6, 8575000.0),\n",
-       " (9, 0, 'Chile', 5, nan),\n",
-       " (8, 3, 'United States', 3, 22000000.0),\n",
-       " (74, 18, 'United States', 2, 14100000.0),\n",
-       " (14, 43, 'United States', 4, 6000000.0),\n",
-       " (48, 10, 'Australia', 8, 10000000.0),\n",
-       " (11, 140, 'United States', 30, 10128000.0),\n",
-       " (57, 0, 'France', 14, nan),\n",
-       " (90, 0, 'United Kingdom', 5, 1400000.0),\n",
-       " (15, 3, 'United States', 2, 32476000.0),\n",
-       " (83, 0, nan, 2, nan),\n",
-       " (19, 0, 'China', 0, nan),\n",
-       " (96, 33, 'China', 6, nan),\n",
-       " (87, 100, 'United States', 5, 8399000.0),\n",
-       " (13, 4, 'United States', 15, 5500000.0),\n",
-       " (54, 21, 'Austria', 8, nan),\n",
-       " (68, 320, 'United States', 31, 30000000.0),\n",
-       " (43, 1, 'China', 0, nan),\n",
-       " (46, 10, None, 0, 10000000.0),\n",
-       " (30, 210, 'United States', 21, 63196000.0),\n",
-       " (18, 0, None, 4, nan),\n",
-       " (40, 3, 'United States', 9, nan),\n",
-       " (81, 91, 'United States', 6, 22589000.0),\n",
-       " (58, 0, None, 5, nan),\n",
-       " (29, 51, 'United States', 19, 7000000.0),\n",
-       " (24, 6, 'France', 15, 3340000.0),\n",
-       " (21, 3, 'United States', 3, 2187000.0),\n",
-       " (67, 22, 'China', 4, 2000000.0),\n",
-       " (80, 0, 'China', 3, nan),\n",
-       " (45, 0, nan, 5, nan),\n",
-       " (42, 31, 'China', 4, nan),\n",
-       " (17, 0, 'United States', 12, nan),\n",
-       " (28, 240, 'United States', 23, 13700000.0),\n",
-       " (85, 4, 'India', 13, 10000000.0),\n",
-       " (75, 17, 'United States', 31, 2679000.0),\n",
-       " (16, 3, 'United Kingdom', 5, 8800000.0),\n",
-       " (25, 0, 'China', 1, nan),\n",
-       " (23, 85, 'France', 30, 3000000.0),\n",
-       " (7, 370, 'United States', 32, 32100000.0),\n",
-       " (12, 14, 'United States', 13, 6000000.0),\n",
-       " (39, 0, 'United States', 26, nan),\n",
-       " (71, 0, 'United States', 3, nan),\n",
-       " (38, 1900, 'United States', 27, 490490000.0),\n",
-       " (22, 5, 'United States', 18, 4340000.0),\n",
-       " (64, 8, 'United States', 24, nan),\n",
-       " (34, 26, 'Israel', 5, nan),\n",
-       " (31, 0, 'Canada', 3, nan),\n",
-       " (32, 0, 'United States', 3, nan),\n",
-       " (98, 1, 'United States', 23, 89400000.0),\n",
-       " (82, 200, 'Russia', 19, 10000000.0),\n",
-       " (93, 2, 'United States', 11, 1500000.0),\n",
-       " (84, 0, 'United States', 0, nan),\n",
-       " (47, 17, 'United States', 4, 7109000.0),\n",
-       " (78, 610, 'United States', 19, 8553000.0),\n",
-       " (37, 3, 'Russia', 4, nan),\n",
-       " (97, 0, 'Russia', 7, nan),\n",
-       " (41, 36, 'United States', 18, 2400000.0),\n",
-       " (56, 68, 'United States', 20, 67500000.0),\n",
-       " (27, 2, 'China', 3, nan),\n",
-       " (76, 0, nan, 0, nan),\n",
-       " (50, 0, 'Brazil', 0, nan),\n",
-       " (69, 2, 'United States', 3, nan),\n",
-       " (70, 5, 'United States', 0, nan),\n",
-       " (79, 30, 'China', 2, 50000000.0),\n",
-       " (20, 3, 'India', 6, 6453000.0)]"
+       "[(30002, 0, 'United States', 0, nan),\n",
+       " (30003, 5, 'United States', 1, 195000.0),\n",
+       " (30004, 14, 'United States', 7, 5000000.0),\n",
+       " (30005, 0, None, 1, nan),\n",
+       " (30006, 10, 'United States', 3, 25000000.0),\n",
+       " (30007, 11, 'United States', 9, 3328000.0),\n",
+       " (30008, 2, 'Ecuador', 6, nan),\n",
+       " (30009, 0, 'Germany', 4, nan),\n",
+       " (30010, 29, 'United States', 12, 11232000.0)]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20037,23 +19486,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "22be0740",
+   "execution_count": 29,
+   "id": "ccb77bb5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "compInfoTups"
+    "\n"
    ]
   },
   {
